[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/World/Pallet Town/objects.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World/Viridian City/floor_tiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World/Viridian City/wall_tiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/World/Viridian City/Pokemon Center.gd" type="Script" id=5]
[ext_resource path="res://Scenes/npc.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=7]

[node name="Pokemon Center" type="Node2D"]
script = ExtResource( 5 )

[node name="floor" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -65537, 8, 0, -131072, 8, 0, -131071, 8, 0, -131070, 8, 0, -131069, 8, 0, -131068, 8, 0, -131067, 8, 0, -131066, 8, 0, -131065, 8, 0, -131064, 8, 0, -131063, 8, 0, -131062, 8, 0, -131061, 8, 0, -131060, 8, 0, -131059, 8, 0, -131058, 8, 0, -131057, 8, 0, -131056, 8, 0, -131055, 8, 0, -1, 8, 0, 0, 19, 65536, 1, 19, 65536, 2, 19, 65536, 3, 19, 0, 4, 19, 0, 5, 19, 0, 6, 19, 0, 7, 19, 0, 8, 19, 0, 9, 19, 0, 10, 19, 0, 11, 19, 0, 12, 19, 0, 13, 19, 0, 14, 19, 0, 15, 19, 0, 16, 19, 65536, 131071, 19, 65536, 65536, 19, 65536, 65537, 19, 65536, 65538, 19, 65536, 65539, 19, 65536, 65540, 19, 65536, 65541, 19, 65536, 65542, 19, 65536, 65543, 19, 65536, 65544, 19, 65536, 65545, 19, 65536, 65546, 19, 65536, 65547, 19, 65536, 65548, 19, 65536, 65549, 19, 65536, 65550, 19, 65536, 65551, 19, 65536, 65552, 19, 65536, 196607, 19, 65536, 131072, 19, 65536, 131073, 19, 65536, 131074, 19, 65536, 131075, 19, 65536, 131076, 19, 65536, 131077, 19, 65536, 131078, 19, 65536, 131079, 19, 65536, 131080, 19, 65536, 131081, 19, 65536, 131082, 19, 65536, 131083, 19, 65536, 131084, 19, 65536, 131085, 19, 65536, 131086, 19, 65536, 131087, 19, 65536, 131088, 19, 65536, 262143, 19, 65536, 196608, 19, 65536, 196609, 19, 65536, 196610, 19, 65536, 196611, 19, 65536, 196612, 19, 65536, 196613, 19, 65536, 196614, 19, 65536, 196615, 19, 65536, 196616, 19, 65536, 196617, 19, 65536, 196618, 19, 65536, 196619, 19, 65536, 196620, 19, 65536, 196621, 19, 65536, 196622, 19, 65536, 196623, 19, 65536, 196624, 19, 65536, 327679, 19, 65536, 262144, 19, 65536, 262145, 19, 65536, 262146, 19, 65536, 262147, 19, 65536, 262148, 19, 65536, 262149, 19, 65536, 262150, 19, 65536, 262151, 19, 65536, 262152, 19, 65536, 262153, 19, 65536, 262154, 19, 65536, 262155, 19, 65536, 262156, 19, 65536, 262157, 19, 65536, 262158, 19, 65536, 262159, 19, 65536, 262160, 19, 65536, 393215, 19, 65536, 327680, 19, 65536, 327681, 19, 65536, 327682, 19, 65536, 327683, 19, 65536, 327684, 19, 65536, 327685, 19, 65536, 327686, 19, 65536, 327687, 19, 65536, 327688, 19, 65536, 327689, 19, 65536, 327690, 19, 65536, 327691, 19, 65536, 327692, 19, 65536, 327693, 19, 65536, 327694, 19, 65536, 327695, 19, 65536, 327696, 19, 65536, 458751, 19, 65536, 393216, 19, 65536, 393217, 19, 65536, 393218, 19, 65536, 393219, 19, 65536, 393220, 19, 65536, 393221, 19, 65536, 393222, 19, 65536, 393223, 19, 65536, 393224, 19, 65536, 393225, 19, 65536, 393226, 19, 65536, 393227, 19, 65536, 393228, 19, 65536, 393229, 19, 65536, 393230, 19, 65536, 393231, 19, 65536, 393232, 19, 65536, 524287, 19, 65536, 458752, 19, 65536, 458753, 19, 65536, 458754, 19, 65536, 458755, 19, 65536, 458756, 19, 65536, 458757, 19, 65536, 458758, 19, 65536, 458759, 19, 65536, 458760, 19, 65536, 458761, 19, 65536, 458762, 19, 65536, 458763, 19, 65536, 458764, 19, 65536, 458765, 19, 65536, 458766, 19, 65536, 458767, 19, 65536, 458768, 19, 65536, 589823, 19, 65536, 524288, 19, 65536, 524289, 19, 65536, 524290, 19, 65536, 524291, 19, 65536, 524292, 19, 65536, 524293, 19, 65536, 524294, 19, 65536, 524295, 19, 65536, 524296, 19, 65536, 524297, 19, 65536, 524298, 19, 65536, 524299, 19, 65536, 524300, 19, 65536, 524301, 19, 65536, 524302, 19, 65536, 524303, 19, 65536, 524304, 19, 65536, 655359, 19, 65536, 589824, 19, 65536, 589825, 19, 65536, 589826, 19, 65536, 589827, 19, 65536, 589828, 19, 65536, 589829, 19, 65536, 589830, 19, 65536, 589831, 19, 65536, 589832, 19, 65536, 589833, 19, 65536, 589834, 19, 65536, 589835, 19, 65536, 589836, 19, 65536, 589837, 19, 65536, 589838, 19, 65536, 589839, 19, 65536, 589840, 19, 65536, 720902, 18, 0 )

[node name="Wall" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -393223, 10, 0, -393222, 10, 0, -393221, 10, 0, -393220, 10, 0, -393219, 10, 0, -393218, 10, 0, -393217, 10, 0, -458752, 10, 0, -458751, 10, 0, -458750, 10, 0, -458749, 10, 0, -458748, 10, 0, -458747, 10, 0, -458746, 10, 0, -458745, 10, 0, -458744, 10, 0, -458743, 10, 0, -458742, 10, 0, -458741, 10, 0, -458740, 10, 0, -458739, 10, 0, -458738, 10, 0, -458737, 10, 0, -458736, 10, 0, -458735, 10, 0, -458734, 10, 0, -458733, 10, 0, -458732, 10, 0, -458731, 10, 0, -458730, 10, 0, -458729, 10, 0, -458728, 10, 0, -458727, 10, 0, -327687, 10, 0, -327686, 10, 0, -327685, 10, 0, -327684, 10, 0, -327683, 10, 0, -327682, 10, 0, -327681, 10, 0, -393216, 10, 0, -393215, 10, 0, -393214, 10, 0, -393213, 10, 0, -393212, 10, 0, -393211, 10, 0, -393210, 10, 0, -393209, 10, 0, -393208, 10, 0, -393207, 10, 0, -393206, 10, 0, -393205, 10, 0, -393204, 10, 0, -393203, 10, 0, -393202, 10, 0, -393201, 10, 0, -393200, 10, 0, -393199, 10, 0, -393198, 10, 0, -393197, 10, 0, -393196, 10, 0, -393195, 10, 0, -393194, 10, 0, -393193, 10, 0, -393192, 10, 0, -393191, 10, 0, -262151, 10, 0, -262150, 10, 0, -262149, 10, 0, -262148, 10, 0, -262147, 10, 0, -262146, 10, 0, -262145, 10, 0, -327680, 10, 0, -327679, 10, 0, -327678, 10, 0, -327677, 10, 0, -327676, 10, 0, -327675, 10, 0, -327674, 10, 0, -327673, 10, 0, -327672, 10, 0, -327671, 10, 0, -327670, 10, 0, -327669, 10, 0, -327668, 10, 0, -327667, 10, 0, -327666, 10, 0, -327665, 10, 0, -327664, 10, 0, -327663, 10, 0, -327662, 10, 0, -327661, 10, 0, -327660, 10, 0, -327659, 10, 0, -327658, 10, 0, -327657, 10, 0, -327656, 10, 0, -327655, 10, 0, -196615, 10, 0, -196614, 10, 0, -196613, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 10, 0, -196609, 10, 0, -262144, 10, 0, -262143, 10, 0, -262142, 10, 0, -262141, 10, 0, -262140, 10, 0, -262139, 10, 0, -262138, 10, 0, -262137, 10, 0, -262136, 10, 0, -262135, 10, 0, -262134, 10, 0, -262133, 10, 0, -262132, 10, 0, -262131, 10, 0, -262130, 10, 0, -262129, 10, 0, -262128, 10, 0, -262127, 10, 0, -262126, 10, 0, -262125, 10, 0, -262124, 10, 0, -262123, 10, 0, -262122, 10, 0, -262121, 10, 0, -262120, 10, 0, -262119, 10, 0, -131079, 10, 0, -131078, 10, 0, -131077, 10, 0, -131076, 10, 0, -131075, 10, 0, -131074, 10, 0, -131073, 10, 0, -196608, 10, 0, -196607, 10, 0, -196606, 10, 0, -196605, 10, 0, -196604, 10, 0, -196603, 10, 0, -196602, 10, 0, -196601, 10, 0, -196600, 10, 0, -196599, 10, 0, -196598, 10, 0, -196597, 10, 0, -196596, 10, 0, -196595, 10, 0, -196594, 10, 0, -196593, 10, 0, -196592, 10, 0, -196591, 10, 0, -196590, 10, 0, -196589, 10, 0, -196588, 10, 0, -196587, 10, 0, -196586, 10, 0, -196585, 10, 0, -196584, 10, 0, -196583, 10, 0, -65543, 10, 0, -65542, 10, 0, -65541, 10, 0, -65540, 10, 0, -65539, 10, 0, -65538, 10, 0, -65537, 1, 0, -131072, 5, 2, -131071, 5, 2, -131070, 5, 2, -131069, 5, 2, -131068, 5, 2, -131067, 5, 2, -131066, 5, 2, -131065, 5, 2, -131064, 5, 2, -131063, 5, 2, -131062, 5, 2, -131061, 5, 2, -131060, 5, 2, -131059, 5, 3, -131058, 5, 3, -131057, 5, 2, -131056, 0, 0, -131055, 10, 0, -131054, 10, 0, -131053, 10, 0, -131052, 10, 0, -131051, 10, 0, -131050, 10, 0, -131049, 10, 0, -131048, 10, 0, -131047, 10, 0, -7, 10, 0, -6, 10, 0, -5, 10, 0, -4, 10, 0, -3, 10, 0, -2, 10, 0, -1, 1, 65536, -65536, 5, 65537, -65535, 5, 65538, -65534, 5, 65537, -65533, 5, 65538, -65532, 5, 65537, -65531, 5, 65538, -65530, 5, 65537, -65529, 5, 65538, -65528, 5, 65537, -65527, 5, 65538, -65526, 5, 65537, -65525, 5, 65538, -65524, 5, 65537, -65523, 5, 65538, -65522, 5, 65537, -65521, 5, 65538, -65520, 0, 65536, -65519, 10, 0, -65518, 10, 0, -65517, 10, 0, -65516, 10, 0, -65515, 10, 0, -65514, 10, 0, -65513, 10, 0, -65512, 10, 0, -65511, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 1, 131072, 0, 5, 131073, 1, 5, 131073, 2, 5, 131073, 3, 5, 131073, 4, 5, 131073, 5, 5, 131073, 6, 5, 131073, 7, 5, 131073, 8, 5, 131073, 9, 5, 131073, 10, 5, 131073, 11, 5, 131073, 12, 5, 131073, 13, 5, 131073, 14, 5, 131073, 15, 5, 131073, 16, 0, 131072, 17, 10, 0, 18, 10, 0, 19, 10, 0, 20, 10, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 24, 10, 0, 25, 10, 0, 131065, 10, 0, 131066, 10, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 10, 0, 131071, 1, 196608, 65553, 10, 0, 65554, 10, 0, 65555, 10, 0, 65556, 10, 0, 65557, 10, 0, 65558, 10, 0, 65559, 10, 0, 65560, 10, 0, 65561, 10, 0, 196601, 10, 0, 196602, 10, 0, 196603, 10, 0, 196604, 10, 0, 196605, 10, 0, 196606, 10, 0, 131089, 10, 0, 131090, 10, 0, 131091, 10, 0, 131092, 10, 0, 131093, 10, 0, 131094, 10, 0, 131095, 10, 0, 131096, 10, 0, 131097, 10, 0, 262137, 10, 0, 262138, 10, 0, 262139, 10, 0, 262140, 10, 0, 262141, 10, 0, 262142, 10, 0, 196625, 10, 0, 196626, 10, 0, 196627, 10, 0, 196628, 10, 0, 196629, 10, 0, 196630, 10, 0, 196631, 10, 0, 196632, 10, 0, 196633, 10, 0, 327673, 10, 0, 327674, 10, 0, 327675, 10, 0, 327676, 10, 0, 327677, 10, 0, 327678, 10, 0, 262161, 10, 0, 262162, 10, 0, 262163, 10, 0, 262164, 10, 0, 262165, 10, 0, 262166, 10, 0, 262167, 10, 0, 262168, 10, 0, 262169, 10, 0, 393209, 10, 0, 393210, 10, 0, 393211, 10, 0, 393212, 10, 0, 393213, 10, 0, 393214, 10, 0, 327697, 10, 0, 327698, 10, 0, 327699, 10, 0, 327700, 10, 0, 327701, 10, 0, 327702, 10, 0, 327703, 10, 0, 327704, 10, 0, 327705, 10, 0, 458745, 10, 0, 458746, 10, 0, 458747, 10, 0, 458748, 10, 0, 458749, 10, 0, 458750, 10, 0, 393233, 10, 0, 393234, 10, 0, 393235, 10, 0, 393236, 10, 0, 393237, 10, 0, 393238, 10, 0, 393239, 10, 0, 393240, 10, 0, 393241, 10, 0, 524281, 10, 0, 524282, 10, 0, 524283, 10, 0, 524284, 10, 0, 524285, 10, 0, 524286, 10, 0, 458769, 10, 0, 458770, 10, 0, 458771, 10, 0, 458772, 10, 0, 458773, 10, 0, 458774, 10, 0, 458775, 10, 0, 458776, 10, 0, 458777, 10, 0, 589817, 10, 0, 589818, 10, 0, 589819, 10, 0, 589820, 10, 0, 589821, 10, 0, 589822, 10, 0, 524305, 10, 0, 524306, 10, 0, 524307, 10, 0, 524308, 10, 0, 524309, 10, 0, 524310, 10, 0, 524311, 10, 0, 524312, 10, 0, 524313, 10, 0, 655353, 10, 0, 655354, 10, 0, 655355, 10, 0, 655356, 10, 0, 655357, 10, 0, 655358, 10, 0, 589841, 10, 0, 589842, 10, 0, 589843, 10, 0, 589844, 10, 0, 589845, 10, 0, 589846, 10, 0, 589847, 10, 0, 589848, 10, 0, 589849, 10, 0, 720889, 10, 0, 720890, 10, 0, 720891, 10, 0, 720892, 10, 0, 720893, 10, 0, 720894, 10, 0, 720895, 10, 0, 655360, 10, 0, 655361, 10, 0, 655362, 10, 0, 655363, 10, 0, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 0, 655368, 10, 0, 655369, 10, 0, 655370, 10, 0, 655371, 10, 0, 655372, 10, 0, 655373, 10, 0, 655374, 10, 0, 655375, 10, 0, 655376, 10, 0, 655377, 10, 0, 655378, 10, 0, 655379, 10, 0, 655380, 10, 0, 655381, 10, 0, 655382, 10, 0, 655383, 10, 0, 655384, 10, 0, 655385, 10, 0, 786425, 10, 0, 786426, 10, 0, 786427, 10, 0, 786428, 10, 0, 786429, 10, 0, 786430, 10, 0, 786431, 10, 0, 720896, 10, 0, 720897, 10, 0, 720898, 10, 0, 720899, 10, 0, 720900, 10, 0, 720901, 10, 0, 720907, 10, 0, 720908, 10, 0, 720909, 10, 0, 720910, 10, 0, 720911, 10, 0, 720912, 10, 0, 720913, 10, 0, 720914, 10, 0, 720915, 10, 0, 720916, 10, 0, 720917, 10, 0, 720918, 10, 0, 720919, 10, 0, 720920, 10, 0, 720921, 10, 0, 851961, 10, 0, 851962, 10, 0, 851963, 10, 0, 851964, 10, 0, 851965, 10, 0, 851966, 10, 0, 851967, 10, 0, 786432, 10, 0, 786433, 10, 0, 786434, 10, 0, 786435, 10, 0, 786436, 10, 0, 786437, 10, 0, 786443, 10, 0, 786444, 10, 0, 786445, 10, 0, 786446, 10, 0, 786447, 10, 0, 786448, 10, 0, 786449, 10, 0, 786450, 10, 0, 786451, 10, 0, 786452, 10, 0, 786453, 10, 0, 786454, 10, 0, 786455, 10, 0, 786456, 10, 0, 786457, 10, 0, 917497, 10, 0, 917498, 10, 0, 917499, 10, 0, 917500, 10, 0, 917501, 10, 0, 917502, 10, 0, 917503, 10, 0, 851968, 10, 0, 851969, 10, 0, 851970, 10, 0, 851971, 10, 0, 851972, 10, 0, 851979, 10, 0, 851980, 10, 0, 851981, 10, 0, 851982, 10, 0, 851983, 10, 0, 851984, 10, 0, 851985, 10, 0, 851986, 10, 0, 851987, 10, 0, 851988, 10, 0, 851989, 10, 0, 851990, 10, 0, 851991, 10, 0, 851992, 10, 0, 851993, 10, 0, 983033, 10, 0, 983034, 10, 0, 983035, 10, 0, 983036, 10, 0, 983037, 10, 0, 983038, 10, 0, 983039, 10, 0, 917504, 10, 0, 917505, 10, 0, 917506, 10, 0, 917507, 10, 0, 917508, 10, 0, 917509, 10, 0, 917510, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917522, 10, 0, 917523, 10, 0, 917524, 10, 0, 917525, 10, 0, 917526, 10, 0, 917527, 10, 0, 917528, 10, 0, 917529, 10, 0, 1048569, 10, 0, 1048570, 10, 0, 1048571, 10, 0, 1048572, 10, 0, 1048573, 10, 0, 1048574, 10, 0, 1048575, 10, 0, 983040, 10, 0, 983041, 10, 0, 983042, 10, 0, 983043, 10, 0, 983044, 10, 0, 983045, 10, 0, 983046, 10, 0, 983047, 10, 0, 983048, 10, 0, 983049, 10, 0, 983050, 10, 0, 983051, 10, 0, 983052, 10, 0, 983053, 10, 0, 983054, 10, 0, 983055, 10, 0, 983056, 10, 0, 983057, 10, 0, 983058, 10, 0, 983059, 10, 0, 983060, 10, 0, 983061, 10, 0, 983062, 10, 0, 983063, 10, 0, 983064, 10, 0, 983065, 10, 0, 1114105, 10, 0, 1114106, 10, 0, 1114107, 10, 0, 1114108, 10, 0, 1114109, 10, 0, 1114110, 10, 0, 1114111, 10, 0, 1048576, 10, 0, 1048577, 10, 0, 1048578, 10, 0, 1048579, 10, 0, 1048580, 10, 0, 1048581, 10, 0, 1048582, 10, 0, 1048583, 10, 0, 1048584, 10, 0, 1048585, 10, 0, 1048586, 10, 0, 1048587, 10, 0, 1048588, 10, 0, 1048589, 10, 0, 1048590, 10, 0, 1048591, 10, 0, 1048592, 10, 0, 1048593, 10, 0, 1048594, 10, 0, 1048595, 10, 0, 1048596, 10, 0, 1048597, 10, 0, 1048598, 10, 0, 1048599, 10, 0, 1048600, 10, 0, 1048601, 10, 0, 1179641, 10, 0, 1179642, 10, 0, 1179643, 10, 0, 1179644, 10, 0, 1179645, 10, 0, 1179646, 10, 0, 1179647, 10, 0, 1114112, 10, 0, 1114113, 10, 0, 1114114, 10, 0, 1114115, 10, 0, 1114116, 10, 0, 1114117, 10, 0, 1114118, 10, 0, 1114119, 10, 0, 1114120, 10, 0, 1114121, 10, 0, 1114122, 10, 0, 1114123, 10, 0, 1114124, 10, 0, 1114125, 10, 0, 1114126, 10, 0, 1114127, 10, 0, 1114128, 10, 0, 1114129, 10, 0, 1114130, 10, 0, 1114131, 10, 0, 1114132, 10, 0, 1114133, 10, 0, 1114134, 10, 0, 1114135, 10, 0, 1114136, 10, 0, 1114137, 10, 0 )

[node name="Inside objects" parent="." instance=ExtResource( 1 )]
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 2
occluder_light_mask = 2
tile_data = PoolIntArray( -131064, 38, 0, -131063, 38, 1, -131058, 29, 0, -131057, 29, 1, -1, 22, 0, -65536, 22, 1, -65535, 2, 0, -65534, 2, 1, -65533, 2, 2, -65532, 39, 0, -65531, 39, 1, -65530, 39, 2, -65529, 39, 3, -65528, 38, 65536, -65527, 38, 65537, -65524, 31, 0, -65523, 31, 1, -65522, 29, 65536, -65521, 29, 65537, 65535, 22, 65536, 0, 22, 65537, 1, 2, 65536, 2, 2, 65537, 3, 2, 65538, 4, 39, 65536, 5, 39, 65537, 6, 39, 65538, 7, 39, 65539, 9, 39, 65541, 10, 39, 65542, 11, 39, 65543, 12, 31, 65536, 13, 31, 65537, 131071, 22, 131072, 65536, 22, 131073, 65540, 39, 131072, 65541, 39, 131073, 65542, 39, 131074, 65543, 39, 131075, 65544, 39, 131076, 65545, 39, 131077, 65546, 39, 131078, 65547, 39, 131079, 65548, 31, 131072, 65549, 31, 131073, 131076, 39, 196608, 131077, 39, 196613, 131078, 39, 196613, 131079, 39, 196613, 131080, 39, 196613, 131081, 39, 196613, 131082, 39, 196614, 131083, 39, 196615, 262154, 37, 0, 262156, 34, 0, 327690, 37, 65536, 327691, 36, 0, 327692, 36, 1, 327693, 36, 2, 327694, 34, 0, 393227, 36, 65536, 393228, 36, 65537, 393229, 36, 65538, 393230, 34, 65536, 458763, 36, 131072, 458764, 36, 131073, 458765, 36, 131074, 458766, 37, 0, 524302, 37, 65536 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 445.665, 409.143 )

[node name="Door" parent="." instance=ExtResource( 7 )]
position = Vector2( 509.665, 609.716 )
scale = Vector2( 4, 4 )
kind_of_door = 4

[node name="NPC" parent="." instance=ExtResource( 6 )]
position = Vector2( 134.243, 228.327 )
scale = Vector2( 3, 3 )
character = 1
number_of_character_in_dialogue = "Center 1"
regular_character = true

[node name="NPC2" parent="." instance=ExtResource( 6 )]
position = Vector2( 990.472, 268.76 )
scale = Vector2( 3, 3 )
character = 4
number_of_character_in_dialogue = "Center 2"

[node name="NPC3" parent="." instance=ExtResource( 6 )]
position = Vector2( 669.386, 302.058 )
scale = Vector2( 3, 3 )
number_of_character_in_dialogue = "Center 3"
[connection signal="body_entered" from="player" to="." method="_on_player_body_entered"]
